feat: add Elasticsearch recommendation with More Like This query