@@ -5,12 +5,18 @@ import com.gamepulse.domain.alert.PriceAlert;
 import com.gamepulse.domain.game.*;
 import com.gamepulse.infra.cache.GameCacheService;
 import com.gamepulse.infra.kafka.GameEventProducer;
-import com.gamepulse.infra.steam.SteamApiClient;
 import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Sort;
+import org.springframework.data.elasticsearch.client.elc.NativeQuery;
+import org.springframework.data.elasticsearch.core.ElasticsearchOperations;
+import org.springframework.data.elasticsearch.core.SearchHit;
+import org.springframework.data.elasticsearch.core.SearchHits;
+import org.springframework.data.elasticsearch.core.query.Query;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-import java.util.List;
-import java.util.Map;
+
+import java.util.*;
+import java.util.stream.Collectors;
 
 @Service
 @Transactional(readOnly = true)
@@ -21,60 +27,39 @@ public class GameService {
     private final AlertRepository alertRepository;
     private final GameCacheService cacheService;
     private final GameEventProducer eventProducer;
-    private final SteamApiClient steamApiClient;
+    private final ItadService itadService;
+    private final GameEsRepository gameEsRepository;
+    private final ElasticsearchOperations elasticsearchOperations;
 
     public GameService(GameRepository gameRepository,
                        GamePriceRepository gamePriceRepository,
                        AlertRepository alertRepository,
                        GameCacheService cacheService,
                        GameEventProducer eventProducer,
-                       SteamApiClient steamApiClient) {
+                       ItadService itadService,
+                       GameEsRepository gameEsRepository,
+                       ElasticsearchOperations elasticsearchOperations, GameEsRepository gameEsRepository1, ElasticsearchOperations elasticsearchOperations1) {
         this.gameRepository = gameRepository;
         this.gamePriceRepository = gamePriceRepository;
         this.alertRepository = alertRepository;
         this.cacheService = cacheService;
         this.eventProducer = eventProducer;
-        this.steamApiClient = steamApiClient;
+        this.itadService = itadService;
+        this.gameEsRepository = gameEsRepository1;
+        this.elasticsearchOperations = elasticsearchOperations1;
     }
 
     // 게임 조회 — Redis 캐시 우선
     public Game getGame(Long appId) {
-        return gameRepository.findById(appId)
-                .orElseGet(() -> {
-                    // DB에 없으면 Steam API로 조회해서 자동 추가
-                    try {
-                        Map<String, Object> detail = steamApiClient.getGameDetail(appId);
-                        if (detail == null) throw new RuntimeException("Game not found: " + appId);
+        Integer cachedPrice = cacheService.getCachedPrice(appId);
+        Game game = gameRepository.findById(appId)
+                .orElseThrow(() -> new RuntimeException("Game not found: " + appId));
 
-                        Map<String, Object> appData = (Map<String, Object>) detail.get(String.valueOf(appId));
-                        if (appData == null || !Boolean.TRUE.equals(appData.get("success")))
-                            throw new RuntimeException("Game not found: " + appId);
-
-                        Map<String, Object> data = (Map<String, Object>) appData.get("data");
-                        if (data == null) throw new RuntimeException("Game not found: " + appId);
-
-                        String title = (String) data.get("name");
-                        Integer price = 0;
-                        Map<String, Object> priceOverview = (Map<String, Object>) data.get("price_overview");
-                        if (priceOverview != null) {
-                            Object finalPrice = priceOverview.get("final");
-                            if (finalPrice instanceof Integer) price = (Integer) finalPrice / 100;
-                        }
-
-                        String thumbnail = "https://cdn.akamai.steamstatic.com/steam/apps/" + appId + "/header.jpg";
-
-                        String genre = null;
-                        List<Map<String, Object>> genres = (List<Map<String, Object>>) data.get("genres");
-                        if (genres != null && !genres.isEmpty()) genre = (String) genres.get(0).get("description");
-
-                        Game game = new Game(appId, title, price);
-                        game.setThumbnailUrl(thumbnail);
-                        game.setGenre(genre);
-                        return gameRepository.save(game);
-                    } catch (Exception e) {
-                        throw new RuntimeException("Game not found: " + appId);
-                    }
-                });
+        // 캐시에 없으면 현재 가격을 캐시에 저장
+        if (cachedPrice == null) {
+            cacheService.cachePrice(appId, game.getCurrentPrice());
+        }
+        return game;
     }
 
     // 키워드 검색
@@ -93,18 +78,60 @@ public class GameService {
         return gameRepository.findAll();
     }
 
-    // 취향 기반 추천 — 같은 장르 게임 반환 (ES 연동 전 임시)
+    // 취향 기반 추천 — 같은 장르 게임 반환 (ES 연동)
     public List<Game> recommend(List<Long> likedAppIds) {
-        return likedAppIds.stream()
+
+        if (likedAppIds == null || likedAppIds.isEmpty()) {
+            return gameRepository.findAll(
+                    PageRequest.of(0, 10)).getContent();
+        }
+
+        // 좋아하는 게임들의 장르/태그 수집
+        List<Game> likedGames = likedAppIds.stream()
                 .map(id -> gameRepository.findById(id).orElse(null))
-                .filter(g -> g != null)
-                .flatMap(g -> gameRepository
-                        .findByTitleContainingIgnoreCase(
-                                g.getGenre() != null ? g.getGenre() : "")
-                        .stream())
-                .distinct()
-                .limit(10)
-                .toList();
+                .filter(Objects::nonNull)
+                .collect(Collectors.toList());
+
+        if (likedGames.isEmpty()) {
+            return gameRepository.findAll(
+                    PageRequest.of(0, 10)).getContent();
+        }
+
+        // More Like This 쿼리 생성
+        // 좋아하는 게임들과 유사한 게임을 ES에서 검색
+        List<String> likedIds = likedAppIds.stream()
+                .map(String::valueOf)
+                .collect(Collectors.toList());
+
+        Query query = NativeQuery.builder()
+                .withQuery(q -> q
+                        .moreLikeThis(mlt -> mlt
+                                        .fields("title", "genre", "tags", "description")
+                                        // 이 필드들을 기준으로 유사도 계산
+                                        .like(like -> like
+                                                .document(doc -> doc
+                                                        .index("games")
+                                                        .id(likedIds.get(0))))
+                                        .minTermFreq(1)
+                                        // 최소 1번 등장한 단어만 유사도 계산에 사용
+                                        .minDocFreq(1)
+                                        // 최소 1개 문서에 등장한 단어만 사용
+                                        .maxQueryTerms(25)
+                                // 최대 25개 단어로 유사도 계산
+                        )
+                )
+                .withPageable(PageRequest.of(0, 10))
+                .build();
+
+        SearchHits<Game> hits =
+                elasticsearchOperations.search(query, Game.class);
+
+        // 좋아하는 게임 제외하고 반환
+        Set<Long> likedSet = new HashSet<>(likedAppIds);
+        return hits.getSearchHits().stream()
+                .map(SearchHit::getContent)
+                .filter(g -> !likedSet.contains(g.getSteamAppId()))
+                .collect(Collectors.toList());
     }
 
     // 가격 업데이트
@@ -112,7 +139,11 @@ public class GameService {
     public void updatePrice(Game game, Integer newPrice) {
         Integer oldPrice = game.getCurrentPrice();
         game.updatePrice(newPrice);
+        // DB 저장
         gameRepository.save(game);
+        // ES 인덱싱 (동기화)
+        gameEsRepository.save(game);
+        // DB에 저장할 때 ES에도 자동으로 인덱싱
 
         // 가격 이력 저장
         gamePriceRepository.save(new GamePrice(game, newPrice));
